--- a/.gitignore
+++ b/.gitignore
@@ -57,3 +57,7 @@ build-iPhoneSimulator/
 
 # Used by RuboCop. Remote config files pulled in from inherit_from directive.
 # .rubocop-https?--*
+
+# Ignore local config files
+config/settings.local.yml
+config/settings/*.local.yml
